--- a/page_analyzer/templates/index.html
+++ b/page_analyzer/templates/index.html
@@ -10,43 +10,55 @@
 
   <body class="min-vh-100 d-flex flex-column">
 
-  <header class="flex-shrink-0">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-3">
-      <a class="navbar-brand" href="/">Анализатор страниц</a>
-      <div id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="/urls">История проверок</a></li>
-        </ul>
-      </div>
-    </nav>
-  </header>
+    <header class="flex-shrink-0">
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark px-3">
+        <a class="navbar-brand" href="/">Анализатор страниц</a>
+        <div id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="/urls">Сайты</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
 
-  <main class="flex-grow-1">
     <div class="container-lg mt-3">
-      <h1></h1>
-      <div class="row">
-        <div class="col-12 col-md-10 col-lg-8 mx-auto border rounded-3 bg-light p-5">
-          <h1 class="display-3 fw-semibold">Анализатор страниц</h1>
-          <p class="lead">Введите адрес страницы для анализа сайта на SEO-пригодность</p>
-            <form action="/urls " method="post" class="d-flex justify-content-center">
-            <label for="text" class="visually-hidden">Url для проверки</label>
-            <input type="url" name="url" placeholder="https://www.example.com"value="" class="form-control form-control-lg" required>
-            <input type="submit" class="btn btn-success btn-lg ms-3 px-5 text-uppercase mx-3" value="Проверить">
-            </form>
+      {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+          {% for category, message in messages %}
+            <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+              {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+          {% endfor %}
+        {% endif %}
+      {% endwith %}
+    </div>
+
+    <main class="flex-grow-1">
+      <div class="container-lg mt-3">
+        <h1></h1>
+        <div class="row">
+          <div class="col-12 col-md-10 col-lg-8 mx-auto border rounded-3 bg-light p-5">
+            <h1 class="display-3 fw-semibold">Анализатор страниц</h1>
+            <p class="lead">Введите адрес страницы для анализа сайта на SEO-пригодность</p>
+              <form action="{{ url_for('add_url') }}" method="post" class="d-flex justify-content-center">
+              <label for="text" class="visually-hidden">Url для проверки</label>
+              <input type="url" name="url" placeholder="https://www.example.com"value="" class="form-control form-control-lg" required>
+              <input type="submit" class="btn btn-success btn-lg ms-3 px-5 text-uppercase mx-3" value="Проверить">
+              </form>
+          </div>
         </div>
       </div>
-    </div>
-  </main>
+    </main>
 
-  <footer class="border-top py-3 mt-5 flex-shrink-0">
-    <div class="container-lg">
-      <div class="text-center">
-      <a href="https://github.com/buna-p/python-project-83/tree/main" target="_blank">GitHub</a>
+    <footer class="border-top py-3 mt-5 flex-shrink-0">
+      <div class="container-lg">
+        <div class="text-center">
+        <a href="https://github.com/buna-p/python-project-83/tree/main" target="_blank">GitHub</a>
+        </div>
       </div>
-    </div>
-  </footer>
+    </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"version":"2024.11.0","token":"1bb656682be94cc5a9c38ff308d5816f","r":1,"server_timing":{"name":{"cfCacheStatus":true,"cfEdge":true,"cfExtPri":true,"cfL4":true,"cfOrigin":true,"cfSpeedBrain":true},"location_startswith":null}}' crossorigin="anonymous"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </body>
 </html>
