--- a/page_analyzer/templates/index.html
+++ b/page_analyzer/templates/index.html
@@ -44,7 +44,7 @@
               <form action="{{ url_for('add_url') }}" method="post" class="d-flex justify-content-center">
               <label for="text" class="visually-hidden">Url для проверки</label>
               <input type="url" name="url" placeholder="https://www.example.com"value="" class="form-control form-control-lg" required>
-              <input type="submit" class="btn btn-success btn-lg ms-3 px-5 text-uppercase mx-3" value="Проверить">
+              <button type="submit" class="btn btn-success btn-lg ms-3 px-5 text-uppercase mx-3">Проверить</button>
               </form>
           </div>
         </div>
