--- a/page_analyzer/templates/url.html
+++ b/page_analyzer/templates/url.html
@@ -52,7 +52,7 @@
               </tr>
               <tr>
                 <td>Дата создания</td>
-                <td>{{ url.created_at }}</td>
+                <td>{{ url.created_at | datetime }}</td>
               </tr>
             </tbody>
           </table>
@@ -81,7 +81,7 @@
                 <td>{{ check.h1 or '' }}</td>
                 <td>{{ check.title or '' }}</td>
                 <td>{{ check.description or '' }}</td>
-                <td>{{ check.created_at }}</td>
+                <td>{{ check.created_at | datetime }}</td>
               </tr>
               {% endfor %}
             </tbody>
